--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,9 @@ jobs:
       contents: read
 
     steps:
+    - name: Make gradlew executable
+      run: chmod +x gradlew
+
     - uses: actions/checkout@v4
     - name: Set up JDK 17
       uses: actions/setup-java@v4
