--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -51,11 +51,11 @@ jobs:
         with:
           # Name of the artifact to upload.
           # Optional. Default is 'artifact'
-          name: Coverate report
+          name: Coverage report
 
           # A file, directory or wildcard pattern that describes what to upload
           # Required.
-          path: './build/coverage'
+          path: './build/jacocoHtml'
 
           # The desired behavior if no files are found using the provided path.
           # Available Options:
